Fix: Meal API Internal Server Error (E002)